--- a/countries.html
+++ b/countries.html
@@ -19,12 +19,12 @@
         <script>
             elem.onclick = function addCountry() {
                 alert(countrysH)
-                <!--я не уверена, что именно нужно выводить в alert и я не понимаю, добавляется ли новая страна в хэш?-->
+//я не уверена, что именно нужно выводить в alert и я не понимаю, добавляется ли новая страна в хэш?//
             }
         </script>
     </div>
     <div>
-        <input type='button'id="info" value='получение информации о стране' onclick='countryName'>
+        <input type='button' id="info" value='получение информации о стране' onclick='countryName'>
         <!--почему prompt на этой кнопке не работает?-->
         <script>
             info.onclick = function getCountryInfo(countryName) {
@@ -39,7 +39,7 @@
     <div>
         <input type='button' id="del" value='удаление информации о стране' onclick='prompt("Введите название страны")'>
         <script>
-            del.onclick = function deleteCountry(countryName){
+            del.onclick = function deleteCountry(countryName) {
                 console.log(countrysH);
             }
             <!--тут тоже не понятно, работает это вообще или нет...-->
