--- a/maket.html
+++ b/maket.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKET</title>
+    <style>
+        #header {
+            border-bottom: #828282 1px solid;
+            width: 940.6px;
+            margin-left: 250.65px;
+            margin-top: 87.94;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        .header {
+            display: inline-block;
+            color: #828282;
+            font-family: 'Gilroy-Bold';
+            font-size: 18px;
+            line-height: 22px;
+            height: 23.03px;
+            margin-top: 33.05px;
+            margin-bottom: 31.86px;
+        }
+
+        .presentation {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 940.6px;
+            margin-left: 250.65px;
+            margin-bottom: 49.67px;
+            box-sizing: border-box;
+        }
+
+        #name {
+
+            font-family: 'Gilroy-Bold';
+            font-size: 47.3392px;
+            line-height: 59px;
+            color: #070707;
+            width: 123.51px;
+            height: 118.17px;
+            margin-top: 39.69px;
+
+        }
+
+        #designer {
+
+            font-family: 'Gilroy-Medium';
+            font-size: 18px;
+            line-height: 22px;
+            width: 155.65px;
+            height: 44.06px;
+            margin-top: 94.77px;
+
+        }
+
+        #lang {
+
+            font-family: 'Gilroy-Bold';
+            font-size: 16px;
+            line-height: 20px;
+            color: #828282;
+            transform: rotate(-90deg);
+            margin-top: 68px;
+            width: 70px;
+            height: 20.06px;
+            margin-bottom: 54px;
+        }
+
+
+        #photo {
+            width: 943.61px;
+            height: 387px;
+            position: absolute;
+            width: 943.61px;
+            height: 387px;
+            left: 250.69px;
+            top: 276.94px;
+            background: url(BSPP2266.png);
+            margin-bottom: 104.06px;
+        }
+
+        .textcontainer {
+            box-sizing: border-box;
+            width: 1445px;
+            height: 506px;
+            left: 0px;
+            top: 768px;
+            background: #F6F6F6;
+            position: relative;
+            margin-top: 104.06px;
+        }
+
+        #me {
+            position: absolute;
+            left: 44.68%;
+            right: 44.54%;
+            top: 18.66%;
+            bottom: 80.43%;
+            font-family: 'Gilroy-Bold';
+            font-size: 34px;
+            line-height: 42px;
+            text-align: center;
+            color: #070707;
+            width: 155.65px;
+            height: 43.06px;
+        }
+
+        .text {
+            box-sizing: border-box;
+            margin-left: 480.33px;
+            margin-top: 181px;
+            margin-bottom: 107px;
+            width: 485.34px;
+            height: 218px;
+            font-family: 'Gilroy-Medium';
+            font-size: 18px;
+            text-align: center;
+            line-height: 21.83px;
+            position: absolute;
+            color: #070707;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div id="header">
+        <div class="header">Home</div>
+        <div class="header">About me</div>
+        <div class="header">Skills</div>
+        <div class="header">Portfolio</div>
+        <div class="header">Contacts</div>
+    </div>
+
+    <div class="presentation">
+        <div id="name">Denis Novik</div>
+        <div id="designer"> UX | UI designer 24 years old, Minsk</div>
+        <div id="lang">RU | ENG</div>
+    </div>
+
+        <div id="photo"></div>
+
+    <div class="textcontainer">
+        <div id="me"> About me </div>
+        <div class="text">
+            <p>Hi, I'm Denis – UX/UI designer from Minsk.
+                I'm interested in design and everything connected with it.</p>
+
+
+            <p>I'm studying at courses "Web and mobile design
+                interfaces" in IT-Academy.</p>
+
+            <p>Ready to implement excellent projects
+                with wonderful people.</p>
+        </div>
+    </div>
 </body>
+
 </html>
