--- a/maket.html
+++ b/maket.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKET</title>
     <style>
+        @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+        
         #header {
             border-bottom: #828282 1px solid;
             width: 940.6px;
