--- a/countries.html
+++ b/countries.html
@@ -19,7 +19,7 @@
     </div>
     <br>
     <div>
-        <input type='button' value='перечень всех стран' onclick='console.log( "список стран:" + listCountrys() );'>
+        <input type='button' value='перечень всех стран' onclick='console.log( "список стран:" + listCountrys() )'>
     </div>
     <br>
     <div>
