--- a/maket.html
+++ b/maket.html
@@ -43,6 +43,16 @@
                 with wonderful people.</p>
         </div>
     </div>
+    <div class="skills">
+        <div id="skills">Skills</div>
+        <div id="programs">I work in such programs as</div>
+        <div class="logos">
+            <div id="photoshop"></div>
+            <div id="illustrator"></div>
+            <div id="aftereffects"></div>
+            <div id="figma"></div>
+        </div>
+    </div>
 </body>
 
 </html>
