--- a/maket.html
+++ b/maket.html
@@ -49,7 +49,7 @@
         <div class="logos">
             <div id="photoshop"></div>
             <div id="illustrator"></div>
-            <div id="aftereffects"></div>
+            <div id="aftereffects"><img src="AdobeAfterEffectslogo.svg" style="width: 100%; height: 100%;"></div>
             <div id="figma"></div>
         </div>
     </div>
