skills logos added

--- a/maket.html
+++ b/maket.html
@@ -47,10 +47,11 @@
         <div id="skills">Skills</div>
         <div id="programs">I work in such programs as</div>
         <div class="logos">
-            <div id="photoshop"></div>
-            <div id="illustrator"></div>
+            <div id="photoshop"><img src="photoshop.svg"></div>
+            <div id="illustrator"><img src="Illustrator.svg"></div>
             <div id="aftereffects"><img src="AdobeAfterEffectslogo.svg" style="width: 100%; height: 100%;"></div>
-            <div id="figma"></div>
+            <div id="figma"><img src="Figmalogo.svg"></div>
+            
         </div>
     </div>
 </body>
