stars style added

--- a/maket.html
+++ b/maket.html
@@ -58,16 +58,38 @@
             <div id="name3">Adobe After Effects</div>
             <div id="name4">Figma</div>
         </div>
-    </div>
+    
     <div class="mainstars">
-        <div class="firststars">
-            <div><img src="blackStar.svg"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="stars">
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="greyStar.svg"></div>
+        </div>
+        <div class="stars">
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="greyStar.svg"></div>
+            <div class="star"><img src="greyStar.svg"></div>
+        </div>
+        <div class="stars">
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="greyStar.svg"></div>
+        </div>
+        <div class="stars">
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="blackStar.svg"></div>
+            <div class="star"><img src="greyStar.svg"></div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
