photo style changes

--- a/maket.html
+++ b/maket.html
@@ -26,7 +26,7 @@
             <div id="lang">RU | ENG</div>
         </div>
 
-        <div id="photo"></div>
+        <div id="photo"><img src="BSPP2266.png" style="width: 100%;"></div>
 
     </div>
     <div class="textcontainer">
@@ -58,38 +58,38 @@
             <div id="name3">Adobe After Effects</div>
             <div id="name4">Figma</div>
         </div>
-    
-    <div class="mainstars">
-        <div class="stars">
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="greyStar.svg"></div>
-        </div>
-        <div class="stars">
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="greyStar.svg"></div>
-            <div class="star"><img src="greyStar.svg"></div>
-        </div>
-        <div class="stars">
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="greyStar.svg"></div>
-        </div>
-        <div class="stars">
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="blackStar.svg"></div>
-            <div class="star"><img src="greyStar.svg"></div>
+
+        <div class="mainstars">
+            <div class="stars">
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="greyStar.svg"></div>
+            </div>
+            <div class="stars">
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="greyStar.svg"></div>
+                <div class="star"><img src="greyStar.svg"></div>
+            </div>
+            <div class="stars">
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="greyStar.svg"></div>
+            </div>
+            <div class="stars">
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="blackStar.svg"></div>
+                <div class="star"><img src="greyStar.svg"></div>
+            </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
