--- a/maket.html
+++ b/maket.html
@@ -25,9 +25,9 @@
             <div id="designer"> UX | UI designer 24 years old, Minsk</div>
             <div id="lang">RU | ENG</div>
         </div>
-
-        <div id="photo"><img src="BSPP2266.png" style="width: 100%;"></div>
-
+        <div class="picture">
+            <div id="photo"></div>
+        </div>
     </div>
     <div class="textcontainer">
         <div id="me"> About me </div>
