--- a/maket.html
+++ b/maket.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <div id="main">
+    <div id="main"><a name="home"></a>
         <div id="header">
-            <div class="header">Home</div>
-            <div class="header">About me</div>
-            <div class="header">Skills</div>
+            <div class="header"><a href = '#home'>Home</a></div>
+            <div class="header"><a href = "#about me">About me</a></div>
+            <div class="header"><a href = "skills">Skills</a></div>
             <div class="header">Portfolio</div>
             <div class="header">Contacts</div>
         </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="textcontainer">
-        <div id="me"> About me </div>
+        <div id="me"><a name="about me"></a>About me </div>
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
@@ -43,7 +43,7 @@
                 with wonderful people.</p>
         </div>
     </div>
-    <div class="skills">
+    <div class="skills"><a name="skills"></a>
         <div id="skills">Skills</div>
         <div id="programs">I work in such programs as</div>
         <div class="logos">
