--- a/maket.html
+++ b/maket.html
@@ -14,8 +14,8 @@
     <div id="main"><a name="home"></a>
         <div id="header">
             <div class="header"><a href = '#home'>Home</a></div>
-            <div class="header"><a href = "#about me">About me</a></div>
-            <div class="header"><a href = "skills">Skills</a></div>
+            <div class="header"><a href = "#aboutme">About me</a></div>
+            <div class="header"><a href = "#skills">Skills</a></div>
             <div class="header">Portfolio</div>
             <div class="header">Contacts</div>
         </div>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="textcontainer">
-        <div id="me"><a name="about me"></a>About me </div>
+        <div id="me"><a name="aboutme"></a>About me </div>
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
