portfolio images added

--- a/maket.html
+++ b/maket.html
@@ -13,9 +13,9 @@
 <body>
     <div id="main"><a name="home"></a>
         <div id="header">
-            <div class="header"><a href = '#home'>Home</a></div>
-            <div class="header"><a href = "#aboutme">About me</a></div>
-            <div class="header"><a href = "#skills">Skills</a></div>
+            <div class="header"><a href='#home'>Home</a></div>
+            <div class="header"><a href="#aboutme">About me</a></div>
+            <div class="header"><a href="#skills">Skills</a></div>
             <div class="header">Portfolio</div>
             <div class="header">Contacts</div>
         </div>
@@ -89,6 +89,13 @@
                 <div class="star"><img src="greyStar.svg"></div>
             </div>
         </div>
+    </div>
+    <div class="portfolio">
+        <div id="title">Portfolio</div>
+        <div><img src="Слой 8.png"></div>
+        <div><img src="reebok_web.png"></div>
+        <div><img src="reebok_web (1).png"></div>
+
     </div>
 </body>
 
