svg files added

--- a/maket.html
+++ b/maket.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="textcontainer">
-        <div id="me"><a name="aboutme"></a>About me </div>
+        <div class="title"><a name="aboutme"></a>About me </div>
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="skills"><a name="skills"></a>
-        <div id="skills">Skills</div>
+        <div class="title">Skills</div>
         <div id="programs">I work in such programs as</div>
         <div class="logos">
             <div id="photoshop"><img src="photoshop.svg"></div>
@@ -91,11 +91,32 @@
         </div>
     </div>
     <div class="portfolio">
-        <div id="title">Portfolio</div>
+        <div class="title">Portfolio</div>
         <div><img src="Слой 8.png"></div>
+        <div class="link">Online fashion store - Homepage</div>
         <div><img src="reebok_web.png"></div>
+        <div class="link">Reebok Store - Concept</div>
         <div><img src="reebok_web (1).png"></div>
+        <div class="link">Braun Landing Page - Concept</div>
+    </div>
+    <div class="contacts">
+        <div class="title">Contacts</div>
+        <div>Want to know more or just chat? You are welcome!</div>
+        <div>Send message</div>
+        <div class="sn">
+        <div id="linkedin">
+            <svg width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M34.5749 0.642578H6.17579C2.93143 0.642578 0.291992 3.27494 0.291992 6.51061V34.8336C0.291992 38.0693 2.93143 40.7017 6.17579 40.7017H34.5749C37.8193 40.7017 40.4587 38.0693 40.4587 34.8336V6.51061C40.4587 3.27494 37.8193 0.642578 34.5749 0.642578ZM38.1052 34.8336C38.1052 36.775 36.5215 38.3544 34.5749 38.3544H6.17579C4.22923 38.3544 2.64551 36.775 2.64551 34.8336V6.51061C2.64551 4.56927 4.22923 2.98979 6.17579 2.98979H34.5749C36.5215 2.98979 38.1052 4.56927 38.1052 6.51061V34.8336Z" fill="#070707" stroke="#070707" stroke-width="0.5"/>
+<svg width="5" height="14" viewBox="0 0 5 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                
+                    
+            </svg>
 
+        </div>
+        <div id="insta"></div>
+        <div id="BE"></div>
+        <div id="dribble"></div>
+    </div>
     </div>
 </body>
 
