style changes added

--- a/maket.html
+++ b/maket.html
@@ -26,15 +26,14 @@
             <div id="lang">RU | ENG</div>
         </div>
         <div class="picture">
-            <div id="photo"></div>
+             <img id="photo"  src="BSPP2266.png">
         </div>
     </div>
     <div class="textcontainer">
-        <div class="title"><a name="aboutme"></a>About me </div>
+        <div id="about"><a name="aboutme"></a>About me </div>
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
-
 
             <p>I'm studying at courses "Web and mobile design
                 interfaces" in IT-Academy.</p>
@@ -44,8 +43,8 @@
         </div>
     </div>
     <div class="skills"><a name="skills"></a>
-        <div class="title">Skills</div>
-        <div id="programs">I work in such programs as</div>
+        <div id="skills">Skills</div>
+        <div class="text">I work in such programs as</div>
         <div class="logos">
             <div id="photoshop"><img src="photoshop.svg"></div>
             <div id="illustrator"><img src="Illustrator.svg"></div>
@@ -93,24 +92,24 @@
     <div class="portfolio">
         <div class="title">Portfolio</div>
         <div><img src="Слой 8.png"></div>
-        <div class="link">Online fashion store - Homepage</div>
+        <div class="text">Online fashion store - Homepage</div>
         <div><img src="reebok_web.png"></div>
-        <div class="link">Reebok Store - Concept</div>
+        <div class="text">Reebok Store - Concept</div>
         <div><img src="reebok_web (1).png"></div>
-        <div class="link">Braun Landing Page - Concept</div>
+        <div class="text">Braun Landing Page - Concept</div>
     </div>
     <div class="contacts">
         <div class="title">Contacts</div>
-        <div>Want to know more or just chat? You are welcome!</div>
+        <div class="text">Want to know more or just chat? <br>
+            You are welcome!</div>
         <div>Send message</div>
-        <div class="sn">
+        <div class="icons">
             <div id="linkedin"> <img src="free-icon-linkedin-1384088.png" style="width: 40.17px; height: 40.06px;"></div>
             <div id="insta"><img src="instagram.svg"></div>
             <div id="BE"><img src="behance.png" style="width: 39.11px; height: 40px;"></div>
             <div id="dribble"><img src="rond.svg"></div>
         </div>
-        <div>Like me on LinkedIn, Instagram, Behance, Dribble</div>
+        <div class="text">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
     </div>
 </body>
-
 </html>
