--- a/maket.html
+++ b/maket.html
@@ -13,11 +13,11 @@
 <body>
     <div id="main"><a name="home"></a>
         <div id="header">
-            <div class="header"><a href='#home'>Home</a></div>
+            <div class="header"><a href="#home">Home</a></div>
             <div class="header"><a href="#aboutme">About me</a></div>
             <div class="header"><a href="#skills">Skills</a></div>
-            <div class="header">Portfolio</div>
-            <div class="header">Contacts</div>
+            <div class="header"><a href="#portfolio">Portfolio</a></div>
+            <div class="header"><a href="#contacts">Contacts</a></div>
         </div>
 
         <div class="presentation">
@@ -90,26 +90,26 @@
         </div>
     </div>
     <div class="portfolio">
-        <div class="title">Portfolio</div>
-        <div><img src="Слой 8.png"></div>
-        <div class="text">Online fashion store - Homepage</div>
-        <div><img src="reebok_web.png"></div>
-        <div class="text">Reebok Store - Concept</div>
-        <div><img src="reebok_web (1).png"></div>
-        <div class="text">Braun Landing Page - Concept</div>
+        <div class="title"><a name="portfolio">Portfolio</a></div>
+        <div class="img"><img src="Слой 8.png"></div>
+        <div class="link">Online fashion store - Homepage</div>
+        <div class="img"><img src="reebok_web.png"></div>
+        <div class="link">Reebok Store - Concept</div>
+        <div class="img"><img src="reebok_web (1).png"></div>
+        <div class="link">Braun Landing Page - Concept</div>
     </div>
     <div class="contacts">
-        <div class="title">Contacts</div>
-        <div class="text">Want to know more or just chat? <br>
+        <div id="contacts"><a name="contacts">Contacts</a></div>
+        <div class="message">Want to know more or just chat? <br>
             You are welcome!</div>
-        <div>Send message</div>
+        <div><button class="button"><a href="mailto:mail@gmail.com">Send message</a> </button></div>
         <div class="icons">
-            <div id="linkedin"> <img src="free-icon-linkedin-1384088.png" style="width: 40.17px; height: 40.06px;"></div>
+            <div id="linkedin"><img src="free-icon-linkedin-1384088.png" style="width: 40.17px; height: 40.06px;"></div>
             <div id="insta"><img src="instagram.svg"></div>
             <div id="BE"><img src="behance.png" style="width: 39.11px; height: 40px;"></div>
             <div id="dribble"><img src="rond.svg"></div>
         </div>
-        <div class="text">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
+        <div id="like">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
     </div>
 </body>
 </html>
