--- a/maket.html
+++ b/maket.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div id="main"><a name="home"></a>
+    <div id="main">
+        <a name="home"></a>
         <div id="header">
             <div class="header"><a href="#home">Home</a></div>
             <div class="header"><a href="#aboutme">About me</a></div>
@@ -30,7 +31,9 @@
         </div>
     </div>
     <div class="textcontainer">
-        <div id="about"><a name="aboutme"></a>About me </div>
+        <a name="aboutme"></a>
+        <div id="about">About me </div>
+        
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
@@ -42,9 +45,11 @@
                 with wonderful people.</p>
         </div>
     </div>
-    <div class="skills"><a name="skills"></a>
+    <div class="skills">
+        <a name="skills"></a>
         <div id="skills">Skills</div>
-        <div class="text">I work in such programs as</div>
+        
+        <div class="skillstext">I work in such programs as</div>
         <div class="logos">
             <div id="photoshop"><img src="photoshop.svg"></div>
             <div id="illustrator"><img src="Illustrator.svg"></div>
@@ -90,7 +95,8 @@
         </div>
     </div>
     <div class="portfolio">
-        <div class="title"><a name="portfolio">Portfolio</a></div>
+        <a name="portfolio"></a>
+        <div class="title">Portfolio</div>
         <div class="img"><img src="Слой 8.png"></div>
         <div class="link">Online fashion store - Homepage</div>
         <div class="img"><img src="reebok_web.png"></div>
@@ -99,7 +105,8 @@
         <div class="link">Braun Landing Page - Concept</div>
     </div>
     <div class="contacts">
-        <div id="contacts"><a name="contacts">Contacts</a></div>
+        <a name="contacts"></a>
+        <div id="contacts">Contacts</div>
         <div class="message">Want to know more or just chat? <br>
             You are welcome!</div>
         <div><button class="button"><a href="mailto:mail@gmail.com">Send message</a> </button></div>
