--- a/maket.html
+++ b/maket.html
@@ -28,6 +28,7 @@
         </div>
         <div class="picture">
              <img id="photo"  src="BSPP2266.png">
+             <img id="mobilephoto" src="full photo.png">
         </div>
     </div>
     <div class="textcontainer">
