logos style changes

--- a/maket.html
+++ b/maket.html
@@ -51,49 +51,68 @@
         <div id="skills">Skills</div>
         
         <div class="skillstext">I work in such programs as</div>
-        <div class="logos">
-            <div id="photoshop"><img src="photoshop.svg"></div>
-            <div id="illustrator"><img src="Illustrator.svg"></div>
-            <div id="aftereffects"><img src="AdobeAfterEffectslogo.svg" style="width: 100%; height: 100%;"></div>
-            <div id="figma"><img src="Figmalogo.svg"></div>
-        </div>
-        <div class="logosnames">
-            <div id="name1">Adobe Photoshop</div>
-            <div id="name2">Adobe Illustrator</div>
-            <div id="name3">Adobe After Effects</div>
-            <div id="name4">Figma</div>
-        </div>
-
-        <div class="mainstars">
-            <div class="stars">
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="greyStar.svg"></div>
+        <div id="logos">
+            <div class="logos">
+              <div class="photoshop">
+                <div class="photoshop" id="photoshopImg"><img src="photoshop.svg"></div>
+                <div class="photoshop" id="name1">Adobe Photoshop</div>
+                <div class="photoshop">
+                  <div class="stars">
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="greyStar.svg"></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="stars">
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="greyStar.svg"></div>
-                <div class="star"><img src="greyStar.svg"></div>
+            <div class="logos">
+              <div class="illustrator">
+                <div class="illustrator" id="illustratorImg"><img src="Illustrator.svg"></div>
+                <div class="illustrator" id="name2">Adobe Illustrator</div>
+                <div class="illustrator">
+                  <div class="stars">
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="greyStar.svg"></div>
+                    <div class="star"><img src="greyStar.svg"></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="stars">
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="greyStar.svg"></div>
+            <div class="logos">
+              <div class="aftereffects">
+                <div class="aftereffects" id="afreteffectsImg"><img src="AdobeAfterEffectslogo.svg"></div>
+                <div class="aftereffects" id="name3">Adobe After Effects</div>
+                <div>
+                  <div class="stars">
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="greyStar.svg"></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="stars">
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="blackStar.svg"></div>
-                <div class="star"><img src="greyStar.svg"></div>
+            <div class="logos">
+              <div class="figma">
+                <div class="figma" id="figmaImg"><img src="Figmalogo.svg"></div>
+                <div id="name4">Figma</div>
+                <div class="figma">
+                  <div class="stars">
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="blackStar.svg"></div>
+                    <div class="star"><img src="greyStar.svg"></div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
     </div>
     <div class="portfolio">
         <a name="portfolio"></a>
