--- a/maket.html
+++ b/maket.html
@@ -86,7 +86,7 @@
               <div class="aftereffects">
                 <div class="aftereffects" id="afreteffectsImg"><img src="AdobeAfterEffectslogo.svg"></div>
                 <div class="aftereffects" id="name3">Adobe After Effects</div>
-                <div>
+                <div class="aftereffects">
                   <div class="stars">
                     <div class="star"><img src="blackStar.svg"></div>
                     <div class="star"><img src="blackStar.svg"></div>
