--- a/maket.html
+++ b/maket.html
@@ -20,6 +20,24 @@
             <div class="header"><a href="#portfolio">Portfolio</a></div>
             <div class="header"><a href="#contacts">Contacts</a></div>
         </div>
+        <nav>
+            <div class="navbar">
+                <div class="container nav-container">
+                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </div>
+                    <div class="menu-items">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#aboutme">About me</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
+                    </div>
+                </div>
+            </div>
 
         <div class="presentation">
             <div id="name">Denis Novik</div>
